--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,33 +1,27 @@
 version: 0.0.1
 type: plugin
 author: jingfelix
-name: dify-plugin-pdm-template
+name: tokenizer
 label:
-  en_US: dify-plugin-pdm-template
-  ja_JP: dify-plugin-pdm-template
-  zh_Hans: dify-plugin-pdm-template
-  pt_BR: dify-plugin-pdm-template
+  en_US: Tokenizer
 description:
-  en_US: A Dify plugin template with pdm
-  ja_JP: A Dify plugin template with pdm
-  zh_Hans: A Dify plugin template with pdm
-  pt_BR: A Dify plugin template with pdm
+  en_US: Tokenizing text using various tokenizers from transformers.AutoTokenizer. Returns the token count.
 icon: icon.svg
 resource:
   memory: 268435456
   permission: {}
 plugins:
   tools:
-    - provider/dify-plugin-pdm-template.yaml
+  - provider/tokenizer.yaml
 meta:
   version: 0.0.1
   arch:
-    - amd64
-    - arm64
+  - amd64
+  - arm64
   runner:
     language: python
-    version: "3.12"
+    version: '3.12'
     entrypoint: main
-created_at: 2025-04-21T22:09:22.160377917+08:00
+created_at: '2025-06-24T02:46:22.674301Z'
 privacy: PRIVACY.md
 verified: false
